// eClean — Prisma Schema
// Sprint 1: Complete schema — all enums, models, indexes

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

generator client {
  provider      = "prisma-client-js"
  binaryTargets = ["native", "linux-musl-openssl-3.0.x"]
}

// ─── Enums ────────────────────────────────────────────────────────────────────

enum Role {
  BUYER
  WORKER
  SUPERVISOR
  ADMIN
  CITIZEN
}

enum TaskStatus {
  OPEN
  ACCEPTED
  IN_PROGRESS
  SUBMITTED
  APPROVED
  VERIFIED    // reserved for future admin manual verification flow
  REJECTED
  DISPUTED
  CANCELLED
  COMPLETED   // set by payout.job.ts after Razorpay confirms settlement
}

enum TaskCategory {
  STREET_CLEANING
  PARK_CLEANING
  DRAIN_CLEANING
  GARBAGE_COLLECTION
  GRAFFITI_REMOVAL
  WATER_BODY
  PUBLIC_TOILET
  OTHER
}

enum DirtyLevel {
  LIGHT
  MEDIUM
  HEAVY
  CRITICAL
}

enum TaskUrgency {
  LOW
  MEDIUM
  HIGH
  URGENT
  CRITICAL
}

enum MediaType {
  BEFORE
  AFTER
  PROOF
  REFERENCE
  VERIFICATION  // worker recreates buyer's reference image at spot-check points
  ARRIVAL       // optional worker arrival image
  REPORT
  PROFILE
}

enum PayoutStatus {
  PENDING
  PROCESSING
  COMPLETED   // was PAID — renamed for Sprint 4 payout job compatibility
  FAILED
}

enum ReportStatus {
  PENDING
  REPORTED
  REVIEWED
  ASSIGNED
  CONVERTED_TO_TASK
  RESOLVED
  REJECTED
}

enum NotificationType {
  TASK_ASSIGNED
  TASK_STARTED
  TASK_SUBMITTED
  TASK_VERIFIED
  TASK_REJECTED
  TASK_DISPUTED
  PAYMENT_RECEIVED
  WITHDRAWAL_PROCESSED
  REPORT_UPDATED
  CITIZEN_REPORT_CREATED
  TASK_FLAGGED
  ZONE_INSPECTED
  IDENTITY_VERIFIED
}

// ─── Models ───────────────────────────────────────────────────────────────────

model User {
  id               String  @id @default(uuid())
  email            String  @unique
  phone            String? @unique
  passwordHash     String
  name             String
  role             Role
  isActive         Boolean @default(true)
  isEmailVerified  Boolean @default(false)
  emailVerifyToken String? @unique
  deviceToken      String?
  createdAt        DateTime @default(now())
  updatedAt        DateTime @updatedAt

  workerProfile   WorkerProfile?
  buyerProfile    BuyerProfile?
  tasksAsBuyer    Task[]          @relation("TaskBuyer")
  tasksAsWorker   Task[]          @relation("TaskWorker")
  payoutsAsWorker Payout[]        @relation("PayoutWorker")
  payoutsAsBuyer  Payout[]        @relation("PayoutBuyer")
  notifications   Notification[]
  citizenReports  CitizenReport[]
  supervisedZones Zone[]
  locationLogs    TaskLocationLog[] @relation("WorkerLocationLogs")
  chatMessages    ChatMessage[]     @relation("ChatSender")
}

model WorkerProfile {
  id               String   @id @default(uuid())
  userId           String   @unique
  activeTaskId     String?  @unique
  skills           String[]
  rating           Float    @default(0)
  completedTasks   Int      @default(0)
  isAvailable      Boolean  @default(true)
  identityVerified Boolean  @default(false)

  // Trust score (Silent Witness Protocol)
  trustScore       Int      @default(70)  // 0-100, starts at 70 (trusted)

  user       User  @relation(fields: [userId], references: [id], onDelete: Cascade)
  activeTask Task? @relation("WorkerActiveTask", fields: [activeTaskId], references: [id])
}

model BuyerProfile {
  id               String @id @default(uuid())
  userId           String @unique
  companyName      String?
  totalTasksPosted Int    @default(0)
  totalSpentCents  Int    @default(0)

  // Buyer accountability (flags dishonest rejections)
  buyerTrustScore      Int    @default(70)  // 0-100, starts at 70 (trusted)
  falseRejectionCount  Int    @default(0)   // times buyer rejected AI-approved work
  isFlaggedForReview   Boolean @default(false)

  user User @relation(fields: [userId], references: [id], onDelete: Cascade)
}

model Zone {
  id              String      @id @default(uuid())
  name            String
  city            String?
  lat             Float?
  lng             Float?
  radiusMeters    Int?
  polygon         Json?
  dirtyLevel      DirtyLevel?
  lastInspectedAt DateTime?
  supervisorId    String?
  createdAt       DateTime    @default(now())

  supervisor     User?           @relation(fields: [supervisorId], references: [id])
  tasks          Task[]
  citizenReports CitizenReport[]
}

model Task {
  id                 String      @id @default(uuid())
  title              String
  description        String
  category           TaskCategory
  status             TaskStatus  @default(OPEN)
  urgency            TaskUrgency @default(MEDIUM)
  dirtyLevel         DirtyLevel
  rateCents          Int
  currency           String      @default("INR")
  buyerId            String
  workerId           String?
  zoneId             String?
  locationLat        Float?
  locationLng        Float?
  locationAddress    String?
  workWindowStart    String      @default("07:00")
  workWindowEnd      String      @default("16:30")
  uploadWindowEnd    String      @default("17:00")
  timezone           String      @default("Asia/Kolkata")
  razorpayOrderId    String?   @unique
  razorpayPaymentId  String?   @unique
  aiScore            Float?
  aiReasoning        String?
  aiModelVersion     String?   // e.g. "claude-sonnet-4-5" — traces which model scored this task
  rejectionReason    String?
  cancellationReason String?
  startedAt          DateTime?
  submittedAt        DateTime?
  completedAt        DateTime?
  cancelledAt        DateTime?
  timeSpentSecs      Int?
  createdAt          DateTime    @default(now())
  updatedAt          DateTime    @updatedAt

  // ─── Reference Point System (Image Capture Redesign) ───────────────────────
  indoorOutdoor         String?    @default("OUTDOOR") // INDOOR | OUTDOOR | MIXED
  totalReferencePoints  Int?       @default(0)         // how many buyer uploaded (0-10)
  areaSizeEstimate      String?                        // SMALL | MEDIUM | LARGE
  workStartedAt         DateTime?                      // when worker pressed "Start Work"
  workDurationSecs      Int?                           // total seconds worked (from timer)

  // Confidence scoring (populated after submit)
  ruleEngineScore       Int?                           // 0-100 from rule engine
  ruleEngineBreakdown   String?                        // JSON: {verification: 20, coverage: 25, ...}
  adversarialScore      Float?                         // 0-1 fraud probability from adversarial AI
  adversarialAnomalies  String?                        // JSON: [{type, description, severity}]
  finalDecision         String?                        // AUTO_PASS | MANUAL_REVIEW | REJECT

  buyer          User           @relation("TaskBuyer", fields: [buyerId], references: [id])
  worker         User?          @relation("TaskWorker", fields: [workerId], references: [id])
  zone           Zone?          @relation(fields: [zoneId], references: [id])
  workerActiveIn WorkerProfile? @relation("WorkerActiveTask")
  media          TaskMedia[]
  payout         Payout?
  events         TaskEvent[]
  locationLogs   TaskLocationLog[]
  chatMessages   ChatMessage[]
  referencePoints      TaskReferencePoint[]
  workerSubmissions    WorkerPointSubmission[]
  environmentFingerprint TaskEnvironmentFingerprint?
  workerEnvCaptures    WorkerEnvironmentCapture[]
  motionSummary        TaskMotionSummary?
  citizenVerifications CitizenVerification[]

  @@index([status])
  @@index([buyerId])
  @@index([workerId])
  @@index([zoneId])
  @@index([status, category])
  @@index([status, locationLat, locationLng])
  @@index([status, urgency])       // open task filtering by urgency
  @@index([status, createdAt])     // sorting OPEN tasks by recency
  @@index([buyerId, status])       // buyer task list queries
  @@index([workerId, status])      // worker my-tasks queries
}

model TaskMedia {
  id              String    @id @default(uuid())
  taskId          String
  url             String
  publicId        String?
  mimeType        String?
  sizeBytes       Int?
  type            MediaType
  idempotencyKey  String?   @unique  // prevents duplicate uploads on retry
  createdAt       DateTime  @default(now())

  task Task @relation(fields: [taskId], references: [id], onDelete: Cascade)
}

// ─── Reference Point System ──────────────────────────────────────────────────
// Connects buyer reference images to worker after images.
// Created when buyer uploads reference photos during task creation.

model TaskReferencePoint {
  id                 String    @id @default(uuid())
  taskId             String
  pointIndex         Int       // 1-10, order of capture
  label              String?   // buyer's note: "near gate", "drain corner"
  buyerImageUrl      String    // Cloudinary URL of buyer's reference photo
  buyerImagePublicId String?   // for Cloudinary deletion
  buyerLat           Float?    // GPS where buyer took the photo
  buyerLng           Float?
  buyerHeading       Float?    // compass direction (future use)
  isVerificationPoint Boolean  @default(false)  // true for 2 random spot-checks
  createdAt          DateTime  @default(now())

  task               Task      @relation(fields: [taskId], references: [id], onDelete: Cascade)
  workerSubmissions  WorkerPointSubmission[]

  @@unique([taskId, pointIndex])
  @@index([taskId])
}

// Links each worker photo to a specific reference point.
// Created when worker uploads a photo for a reference point.

model WorkerPointSubmission {
  id                    String    @id @default(uuid())
  taskId                String
  referencePointId      String
  workerId              String
  mediaType             MediaType // AFTER or VERIFICATION
  imageUrl              String    // Cloudinary URL
  imagePublicId         String?   // for Cloudinary deletion
  workerLat             Float?
  workerLng             Float?
  workerHeading         Float?
  photoHash             String?   // SHA-256 of image bytes
  capturedAt            DateTime?
  deviceId              String?
  idempotencyKey        String?   @unique  // retry-safe uploads
  status                String    @default("UPLOADED") // PENDING | UPLOADING | UPLOADED | FAILED

  // Scoring (populated by rule engine)
  locationMatchScore    Float?    // GPS proximity to buyer point (0-100)

  createdAt             DateTime  @default(now())

  task                  Task      @relation(fields: [taskId], references: [id], onDelete: Cascade)
  referencePoint        TaskReferencePoint @relation(fields: [referencePointId], references: [id], onDelete: Cascade)

  @@index([taskId])
  @@index([referencePointId])
  @@index([workerId])
}

// ─── Silent Witness Protocol — Environmental DNA ─────────────────────────────
// Buyer's environmental fingerprint captured at task creation site.

model TaskEnvironmentFingerprint {
  id              String   @id @default(uuid())
  taskId          String   @unique
  magX            Float?   // Magnetometer X
  magY            Float?
  magZ            Float?
  barometer       Float?   // atmospheric pressure (hPa)
  ambientLight    Float?   // 0-1 normalized
  cellType        String?  // cellular | wifi
  cellCarrier     String?
  wifiNetworks    String?  // JSON: [{ssid, bssid, rssi}]
  capturedAt      DateTime
  createdAt       DateTime @default(now())

  task            Task     @relation(fields: [taskId], references: [id], onDelete: Cascade)
}

// Worker's environmental DNA captured during task execution.

model WorkerEnvironmentCapture {
  id              String   @id @default(uuid())
  taskId          String
  workerId        String
  captureType     String   // START | PHOTO | SUBMIT
  magX            Float?
  magY            Float?
  magZ            Float?
  barometer       Float?
  ambientLight    Float?
  cellType        String?
  cellCarrier     String?
  wifiNetworks    String?
  matchScore      Float?   // 0-100 compared to buyer's fingerprint
  capturedAt      DateTime
  createdAt       DateTime @default(now())

  task            Task     @relation(fields: [taskId], references: [id], onDelete: Cascade)

  @@index([taskId])
  @@index([workerId])
}

// ─── Silent Witness Protocol — Motion Signature ──────────────────────────────
// Aggregated accelerometer data from worker's task duration.

model TaskMotionSummary {
  id              String   @id @default(uuid())
  taskId          String   @unique
  workerId        String
  cleaningPct     Float    // 0-1
  walkingPct      Float
  standingPct     Float
  vehiclePct      Float
  totalWindows    Int      // number of 30-second windows
  durationSecs    Int
  hasRedFlag      Boolean  @default(false)
  hasYellowFlag   Boolean  @default(false)
  createdAt       DateTime @default(now())

  task            Task     @relation(fields: [taskId], references: [id], onDelete: Cascade)
}

// ─── Silent Witness Protocol — Citizen Mesh ──────────────────────────────────
// Post-task verification by random citizen walking past.

model CitizenVerification {
  id              String    @id @default(uuid())
  taskId          String
  citizenId       String
  photoUrl        String?   // Cloudinary URL (optional)
  photoPublicId   String?
  rating          String    // CLEAN | PARTIALLY_CLEAN | DIRTY
  citizenLat      Float?
  citizenLng      Float?
  matchesWorker   Boolean?  // AI comparison result
  rewardAmount    Int       // paise (500 = 5 rupees)
  rewardPaid      Boolean   @default(false)
  verifiedAt      DateTime
  createdAt       DateTime  @default(now())

  task            Task      @relation(fields: [taskId], references: [id], onDelete: Cascade)

  @@index([taskId])
  @@index([citizenId])
}

model Payout {
  id                String       @id @default(uuid())
  taskId            String       @unique
  workerId          String
  buyerId           String
  amountCents       Int
  platformFeeCents  Int
  workerAmountCents Int
  currency          String       @default("INR")
  status            PayoutStatus @default(PENDING)
  razorpayPayoutId  String?
  paidAt            DateTime?
  createdAt         DateTime     @default(now())

  task   Task @relation(fields: [taskId], references: [id])
  worker User @relation("PayoutWorker", fields: [workerId], references: [id])
  buyer  User @relation("PayoutBuyer", fields: [buyerId], references: [id])
}

model Notification {
  id        String           @id @default(uuid())
  userId    String
  type      NotificationType
  title     String
  body      String
  data      Json?
  isRead    Boolean          @default(false)
  createdAt DateTime         @default(now())

  user User @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@index([userId, isRead])
}

model CitizenReport {
  id              String       @id @default(uuid())
  reporterId      String
  zoneId          String?
  category        TaskCategory @default(OTHER)
  urgency         TaskUrgency  @default(MEDIUM)
  locationLat     Float?
  locationLng     Float?
  locationAddress String?
  photoUrl        String?
  description     String
  status          ReportStatus @default(PENDING)
  linkedTaskId    String?      @map("taskId")
  createdAt       DateTime     @default(now())
  updatedAt       DateTime     @updatedAt

  reporter User  @relation(fields: [reporterId], references: [id])
  zone     Zone? @relation(fields: [zoneId], references: [id])
}

model TaskEvent {
  id        String     @id @default(uuid())
  taskId    String
  actor     String
  actorRole Role
  action    String?
  from      TaskStatus
  to        TaskStatus
  note      String?
  createdAt DateTime   @default(now())

  task Task @relation(fields: [taskId], references: [id], onDelete: Cascade)

  @@index([taskId])
}

model TaskLocationLog {
  id        String   @id @default(uuid())
  taskId    String
  workerId  String
  lat       Float
  lng       Float
  accuracy  Float?
  createdAt DateTime @default(now())

  task   Task @relation(fields: [taskId], references: [id], onDelete: Cascade)
  worker User @relation("WorkerLocationLogs", fields: [workerId], references: [id])

  @@index([taskId])
}

model ChatMessage {
  id         String   @id @default(uuid())
  taskId     String
  senderId   String
  senderRole Role
  content    String
  createdAt  DateTime @default(now())

  task   Task @relation(fields: [taskId], references: [id], onDelete: Cascade)
  sender User @relation("ChatSender", fields: [senderId], references: [id])

  @@index([taskId])
}

// ─── Analytics Models ────────────────────────────────────────────────────────
// These tables are DELIBERATELY isolated from core models:
//   - No @relation to core tables (IDs stored as plain strings)
//   - No cascade deletes (historical data survives core entity deletion)
//   - All table names prefixed "analytics_" via @@map (easy to identify + migrate)
//   - One-way data flow: aggregation job reads core → writes analytics
//   - When admin splits to separate repo, these tables move with it
//
// DO NOT add Prisma @relation to User, Task, Zone, etc. here.
// ─────────────────────────────────────────────────────────────────────────────

/// Universal mutation stream. Every write operation in the system gets a row.
/// This is the bridge table for future admin separation — the new service
/// subscribes to EventLog instead of reading 15 core tables directly.
/// Today: Postgres table read via Prisma.
/// Tomorrow: could become a Redis Stream or message queue. Zero code change in consumers.
model EventLog {
  id         String   @id @default(uuid())
  entity     String   // TASK, USER, ZONE, REPORT, PAYOUT, MEDIA, CHAT, NOTIFICATION
  entityId   String   // UUID of the thing that changed
  action     String   // created, status_changed, photo_uploaded, approved, rejected, etc.
  actorId    String?  // who did it (null for SYSTEM actions like cron jobs)
  actorRole  String?  // BUYER, WORKER, ADMIN, SUPERVISOR, CITIZEN, SYSTEM
  payload    Json?    // relevant data snapshot (old/new values, metadata)
  createdAt  DateTime @default(now())

  @@index([entity, entityId])
  @@index([createdAt])
  @@index([actorId])
  @@index([entity, action])
  @@map("analytics_event_log")
}

/// Daily per-zone snapshot. One row per zone per day.
/// Dirty score (0-100) is the core intelligence product — this is what
/// municipal corporations and real estate platforms pay for.
/// Score formula: (citizenReports × 3) + (openTasks × 2)
///              + (rejectionRate × 20) + (daysSinceInspection × 1.5)
///              normalized to 0-100.
model AnalyticsZoneSnapshot {
  id                     String   @id @default(uuid())
  zoneId                 String
  zoneName               String   // denormalized — survives zone renames
  city                   String?  // denormalized
  date                   DateTime // date only (time zeroed), for upsert idempotency
  dirtyScore             Int      @default(0) // 0 = pristine, 100 = critical
  tasksCreated           Int      @default(0)
  tasksCompleted         Int      @default(0)
  tasksCancelled         Int      @default(0)
  avgAiScore             Float?   // null if no tasks submitted that day
  aiRejectionRate        Float?   // 0.0-1.0, % of AI scores below 0.5
  citizenReportCount     Int      @default(0)
  avgCompletionTimeSecs  Int?     // null if no completed tasks
  activeWorkerCount      Int      @default(0) // distinct workers in this zone
  openTaskCountSnapshot  Int      @default(0) // open tasks at end of day
  createdAt              DateTime @default(now())

  @@unique([zoneId, date]) // upsert key — safe to re-run aggregation
  @@index([date])
  @@index([zoneId, date])
  @@index([dirtyScore])
  @@map("analytics_zone_snapshot")
}

/// Daily platform-wide rollup. One row per day.
/// Powers admin dashboard, investor pitch deck, and growth metrics.
model AnalyticsPlatformMetrics {
  id                     String   @id @default(uuid())
  date                   DateTime @unique // one row per day
  tasksCreated           Int      @default(0)
  tasksCompleted         Int      @default(0)
  tasksCancelled         Int      @default(0)
  tasksDisputed          Int      @default(0)
  totalRevenueCents      Int      @default(0) // sum of rateCents for completed tasks
  platformFeeCents       Int      @default(0) // sum of platform fees collected
  totalPayoutCents       Int      @default(0) // sum paid to workers
  activeWorkers          Int      @default(0) // distinct workers with active tasks
  activeBuyers           Int      @default(0) // distinct buyers with active tasks
  newSignups             Int      @default(0)
  newSignupsByRole       Json?    // { WORKER: 5, BUYER: 3, CITIZEN: 12 }
  avgTaskCompletionSecs  Int?     // null if no completed tasks
  avgAiScore             Float?   // platform-wide AI score average
  citizenReportsTotal    Int      @default(0)
  createdAt              DateTime @default(now())

  @@index([date])
  @@map("analytics_platform_metrics")
}

/// Per-zone per-hour-of-day waste pattern. One row per zone per date per hour.
/// After 30 days, grouping by hourOfDay across dates reveals:
/// "Koramangala generates 3x more waste between 6-9 AM than afternoon."
/// Urban planners and municipalities pay serious money for this.
model AnalyticsWastePattern {
  id           String   @id @default(uuid())
  zoneId       String
  date         DateTime // which day
  hourOfDay    Int      // 0-23 (IST)
  dayOfWeek    Int      // 0=Sunday, 6=Saturday
  reportCount  Int      @default(0) // citizen reports in this hour
  taskCount    Int      @default(0) // tasks created in this hour
  createdAt    DateTime @default(now())

  @@unique([zoneId, date, hourOfDay]) // upsert key
  @@index([zoneId, hourOfDay])       // pattern queries: group by hour across dates
  @@index([zoneId, dayOfWeek])       // day-of-week patterns
  @@map("analytics_waste_pattern")
}

/// Per-worker per-day aggregation. One row per worker per day.
/// Enables: leaderboards, churn prediction, earnings optimization,
/// route efficiency analysis, quality trends.
model AnalyticsWorkerDaily {
  id                  String   @id @default(uuid())
  workerId            String
  workerName          String   // denormalized
  date                DateTime
  tasksAccepted       Int      @default(0)
  tasksCompleted      Int      @default(0)
  tasksCancelled      Int      @default(0)
  avgTimeSecs         Int?     // average task completion time, null if none completed
  avgAiScore          Float?   // average AI verification score
  totalDistanceMeters Float?   // sum of GPS trail distance (from TaskLocationLog)
  earningsCents       Int      @default(0) // total earned (COMPLETED payouts)
  zonesWorked         String[] // distinct zone IDs worked in
  categoriesWorked    String[] // distinct task categories worked on
  createdAt           DateTime @default(now())

  @@unique([workerId, date]) // upsert key
  @@index([date])
  @@index([workerId, date])
  @@map("analytics_worker_daily")
}

/// Per-photo EXIF metadata. One row per uploaded TaskMedia.
/// Captures GPS coordinates, timestamp, and device info FROM THE PHOTO ITSELF
/// (not from the app). This is the fraud detection table:
/// if EXIF GPS doesn't match task location, the worker is cheating.
/// CANNOT be recovered later — EXIF is stripped by Cloudinary on upload.
/// Must be extracted BEFORE the Cloudinary upload in media.service.ts.
model AnalyticsPhotoMeta {
  id                     String    @id @default(uuid())
  mediaId                String    @unique // TaskMedia.id — one EXIF record per photo
  taskId                 String
  uploaderId             String    // who uploaded (worker for BEFORE/AFTER/PROOF, buyer for REFERENCE)
  uploaderRole           String    // WORKER or BUYER
  mediaType              String    // BEFORE, AFTER, PROOF, REFERENCE
  exifLat                Float?    // GPS latitude from photo EXIF (null if no EXIF)
  exifLng                Float?    // GPS longitude from photo EXIF
  exifTimestamp          DateTime? // when photo was actually taken (from EXIF)
  exifAltitude           Float?    // altitude in meters (useful for high-rise areas)
  deviceMake             String?   // e.g. "Samsung", "Apple"
  deviceModel            String?   // e.g. "SM-A536B", "iPhone 14"
  imageWidth             Int?      // original resolution
  imageHeight            Int?
  taskLat                Float?    // task.locationLat at time of upload (denormalized)
  taskLng                Float?    // task.locationLng at time of upload (denormalized)
  // Device-captured metadata (from phone — more reliable than EXIF after compression)
  capturedLat            Float?    // GPS from expo-location at shutter press
  capturedLng            Float?
  capturedAt             DateTime? // ISO timestamp from phone clock
  capturedDeviceId       String?   // Device.modelId from expo-device
  photoHash              String?   // SHA-256 of raw photo bytes — tamper-proof evidence chain
  // Fraud detection
  distanceFromTaskMeters Float?    // haversine(bestGPS, taskGPS) — null if either is missing
  isFlagged              Boolean   @default(false) // true if distance > 500m
  flagReason             String?   // e.g. "Photo GPS 2.3km from task location"
  createdAt              DateTime  @default(now())

  @@index([taskId])
  @@index([isFlagged])
  @@index([uploaderId])
  @@map("analytics_photo_meta")
}

/// Lightweight behavioral event stream. The Mixpanel/PostHog you own.
/// Mobile app sends batches of these events to track user behavior:
/// what tasks they view, skip, search for, how long they stay on screens.
/// This is the supply-demand intelligence layer — "workers in Hyderabad
/// skip drain tasks" = price is too low or category is unattractive.
model AnalyticsBehaviorEvent {
  id          String   @id @default(uuid())
  userId      String?  // nullable for future anonymous tracking
  userRole    String?  // WORKER, BUYER, CITIZEN, etc.
  eventType   String   // task_viewed, task_skipped, search_performed, filter_applied,
                       // app_session_start, app_session_end, screen_viewed,
                       // task_detail_time_spent, post_task_abandoned
  entityType  String?  // what the event is about: TASK, ZONE, SCREEN, etc.
  entityId    String?  // e.g. taskId that was viewed/skipped
  payload     Json?    // extra context: filters used, screen name, duration_ms, etc.
  sessionId   String?  // groups events from one app session (UUID generated on app start)
  createdAt   DateTime @default(now())

  @@index([userId])
  @@index([eventType])
  @@index([createdAt])
  @@index([sessionId])
  @@index([eventType, createdAt]) // time-range queries by event type
  @@map("analytics_behavior_event")
}

/// Audit trail for every B2B data export. Required for DPDP Act compliance.
/// Logs who accessed what data, when, from where.
model DataExportLog {
  id             String   @id @default(uuid())
  apiKeyId       String   // which API key was used
  organizationName String // denormalized from ApiKey for fast auditing
  endpoint       String   // which endpoint was called
  params         Json?    // query parameters sent
  rowCount       Int      // how many rows were returned
  ipAddress      String?  // requester's IP
  responseTimeMs Int?     // how long the request took
  createdAt      DateTime @default(now())

  @@index([apiKeyId])
  @@index([createdAt])
  @@map("analytics_data_export_log")
}

/// B2B API keys for external data consumers (municipalities, real estate platforms, etc.)
/// Raw key is shown once on creation, then only the SHA-256 hash is stored.
/// Same security pattern as password hashing — key is unrecoverable.
model ApiKey {
  id               String    @id @default(uuid())
  keyHash          String    @unique // SHA-256 of the raw API key
  keyPrefix        String    // first 8 chars of key (for identification in logs/UI: "eCl_abc1...")
  name             String    // human label: "GHMC Hyderabad Production"
  organizationName String    // "Greater Hyderabad Municipal Corporation"
  contactEmail     String?   // who to contact about this key
  permissions      String[]  // ["zones", "waste_patterns", "cleanliness_index"] — which data endpoints
  rateLimitTier    String    @default("standard") // "standard" (100/hr), "premium" (1000/hr), "unlimited"
  isActive         Boolean   @default(true)
  createdById      String    // admin who created it (plain string, no FK)
  lastUsedAt       DateTime? // updated on each API call
  expiresAt        DateTime? // null = never expires
  createdAt        DateTime  @default(now())

  @@index([isActive])
  @@map("analytics_api_key")
}
